template.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.44.1.10279",
      "templateHash": "1275123237129578152"
    }
  },
  "parameters": {
    "extensions_enablevmAccess_username": {
      "type": "securestring"
    },
    "extensions_enablevmAccess_password": {
      "type": "securestring"
    },
    "extensions_enablevmAccess_ssh_key": {
      "type": "securestring"
    },
    "extensions_enablevmAccess_reset_ssh": {
      "type": "securestring"
    },
    "extensions_enablevmAccess_remove_user": {
      "type": "securestring"
    },
    "extensions_enablevmAccess_expiration": {
      "type": "securestring"
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "bharatomni"
    },
    "virtualMachines_bo_platform_vm_india_name": {
      "type": "string",
      "defaultValue": "bo-sandbox-vm-india"
    },
    "publicIPAddresses_bo_platform_vm_india_ip_name": {
      "type": "string",
      "defaultValue": "bo-sandbox-vm-india-ip"
    },
    "virtualNetworks_bo_platform_vm_india_vnet_name": {
      "type": "string",
      "defaultValue": "bo-sandbox-vm-india-vnet"
    },
    "networkWatchers_NetworkWatcher_centralindia_name": {
      "type": "string",
      "defaultValue": "NetworkWatcher_centralindia"
    },
    "networkInterfaces_bo_platform_vm_india632_z1_name": {
      "type": "string",
      "defaultValue": "bo-sandbox-vm-india_z1"
    },
    "networkSecurityGroups_bo_platform_vm_india_nsg_name": {
      "type": "string",
      "defaultValue": "bo-sandbox-vm-india-nsg"
    }
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2025-05-01",
      "name": "[parameters('networkSecurityGroups_bo_platform_vm_india_nsg_name')]",
      "location": "centralindia",
      "properties": {
        "securityRules": []
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2025-05-01",
      "name": "[format('{0}/{1}', parameters('networkSecurityGroups_bo_platform_vm_india_nsg_name'), 'SSH')]",
      "properties": {
        "protocol": "TCP",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 300,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_bo_platform_vm_india_nsg_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2025-05-01",
      "name": "[format('{0}/{1}', parameters('networkSecurityGroups_bo_platform_vm_india_nsg_name'), 'HTTPS')]",
      "properties": {
        "protocol": "TCP",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 320,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_bo_platform_vm_india_nsg_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2025-05-01",
      "name": "[format('{0}/{1}', parameters('networkSecurityGroups_bo_platform_vm_india_nsg_name'), 'HTTP')]",
      "properties": {
        "protocol": "TCP",
        "sourcePortRange": "*",
        "destinationPortRange": "80",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 340,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_bo_platform_vm_india_nsg_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2025-05-01",
      "name": "[format('{0}/{1}', parameters('networkSecurityGroups_bo_platform_vm_india_nsg_name'), 'service-provider-platform')]",
      "properties": {
        "protocol": "TCP",
        "sourcePortRange": "*",
        "destinationPortRange": "8080",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 350,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_bo_platform_vm_india_nsg_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2025-05-01",
      "name": "[format('{0}/{1}', parameters('networkSecurityGroups_bo_platform_vm_india_nsg_name'), 'client-portal-app')]",
      "properties": {
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "5173",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 360,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_bo_platform_vm_india_nsg_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2025-05-01",
      "name": "[format('{0}/{1}', parameters('networkSecurityGroups_bo_platform_vm_india_nsg_name'), 'admin-portal')]",
      "properties": {
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "8081",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 370,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_bo_platform_vm_india_nsg_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "apiVersion": "2025-05-01",
      "name": "[format('{0}/{1}', parameters('networkSecurityGroups_bo_platform_vm_india_nsg_name'), 'admin-portal-ui')]",
      "properties": {
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "8181",
        "sourceAddressPrefix": "*",
        "destinationAddressPrefix": "*",
        "access": "Allow",
        "priority": 380,
        "direction": "Inbound",
        "sourcePortRanges": [],
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "destinationAddressPrefixes": []
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_bo_platform_vm_india_nsg_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkWatchers",
      "apiVersion": "2025-05-01",
      "name": "[parameters('networkWatchers_NetworkWatcher_centralindia_name')]",
      "location": "centralindia",
      "properties": {}
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2025-05-01",
      "name": "[parameters('publicIPAddresses_bo_platform_vm_india_ip_name')]",
      "location": "centralindia",
      "sku": {
        "name": "Standard",
        "tier": "Regional"
      },
      "zones": [
        "1"
      ],
      "properties": {
        "ipAddress": "135.235.196.109",
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Static",
        "idleTimeoutInMinutes": 4,
        "ipTags": [],
        "ddosSettings": {
          "protectionMode": "VirtualNetworkInherited"
        }
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2025-05-01",
      "name": "[parameters('virtualNetworks_bo_platform_vm_india_vnet_name')]",
      "location": "centralindia",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.0.0.0/16"
          ]
        },
        "privateEndpointVNetPolicies": "Disabled",
        "virtualNetworkPeerings": [],
        "enableDdosProtection": false
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2025-05-01",
      "name": "[format('{0}/{1}', parameters('virtualNetworks_bo_platform_vm_india_vnet_name'), 'default')]",
      "properties": {
        "addressPrefix": "10.0.0.0/24",
        "delegations": [],
        "privateEndpointNetworkPolicies": "Disabled",
        "privateLinkServiceNetworkPolicies": "Enabled"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_bo_platform_vm_india_vnet_name'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2025-05-01",
      "name": "[parameters('networkInterfaces_bo_platform_vm_india632_z1_name')]",
      "location": "centralindia",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAddress": "10.0.0.4",
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_bo_platform_vm_india_ip_name'))]",
                "properties": {
                  "deleteOption": "Detach"
                }
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_bo_platform_vm_india_vnet_name'), 'default')]"
              },
              "primary": true,
              "privateIPAddressVersion": "IPv4"
            }
          }
        ],
        "dnsSettings": {
          "dnsServers": []
        },
        "enableAcceleratedNetworking": true,
        "enableIPForwarding": false,
        "disableTcpStateTracking": false,
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_bo_platform_vm_india_nsg_name'))]"
        },
        "nicType": "Standard",
        "auxiliaryMode": "None",
        "auxiliarySku": "None"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_bo_platform_vm_india_nsg_name'))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_bo_platform_vm_india_ip_name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_bo_platform_vm_india_vnet_name'), 'default')]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2025-11-01",
      "name": "[parameters('virtualMachines_bo_platform_vm_india_name')]",
      "location": "centralindia",
      "zones": [
        "1"
      ],
      "identity": {
        "type": "SystemAssigned"
      },
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_D2s_v3"
        },
        "additionalCapabilities": {
          "hibernationEnabled": false
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "canonical",
            "offer": "ubuntu-24_04-lts",
            "sku": "server",
            "version": "latest"
          },
          "osDisk": {
            "osType": "Linux",
            "name": "[format('{0}_disk1_2e69963a153b4c1dafc4edf6ce4289bc', parameters('virtualMachines_bo_platform_vm_india_name'))]",
            "createOption": "FromImage",
            "caching": "ReadWrite",
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            },
            "deleteOption": "Delete",
            "diskSizeGB": 30
          },
          "dataDisks": [],
          "diskControllerType": "SCSI"
        },
        "osProfile": {
          "computerName": "[parameters('virtualMachines_bo_platform_vm_india_name')]",
          "adminUsername": "[parameters('adminUsername')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "ssh": {
              "publicKeys": [
                {
                  "path": "[format('/home/{0}/.ssh/authorized_keys', parameters('adminUsername'))]",
                  "keyData": "[parameters('extensions_enablevmAccess_ssh_key')]"
                }
              ]
            },
            "provisionVMAgent": true,
            "patchSettings": {
              "patchMode": "ImageDefault",
              "assessmentMode": "ImageDefault"
            }
          },
          "secrets": [],
          "allowExtensionOperations": true
        },
        "securityProfile": {
          "uefiSettings": {
            "secureBootEnabled": true,
            "vTpmEnabled": true
          },
          "securityType": "TrustedLaunch"
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_bo_platform_vm_india632_z1_name'))]",
              "properties": {
                "deleteOption": "Detach"
              }
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_bo_platform_vm_india632_z1_name'))]"
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "apiVersion": "2025-11-01",
      "name": "[format('{0}/{1}', parameters('virtualMachines_bo_platform_vm_india_name'), 'enablevmAccess')]",
      "location": "centralindia",
      "properties": {
        "autoUpgradeMinorVersion": true,
        "publisher": "Microsoft.OSTCExtensions",
        "type": "VMAccessForLinux",
        "typeHandlerVersion": "1.5",
        "settings": {},
        "protectedSettings": {
          "username": "[parameters('extensions_enablevmAccess_username')]",
          "password": "[parameters('extensions_enablevmAccess_password')]",
          "ssh_key": "[parameters('extensions_enablevmAccess_ssh_key')]",
          "reset_ssh": "[parameters('extensions_enablevmAccess_reset_ssh')]",
          "remove_user": "[parameters('extensions_enablevmAccess_remove_user')]",
          "expiration": "[parameters('extensions_enablevmAccess_expiration')]"
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_bo_platform_vm_india_name'))]"
      ]
    }
  ]
}
